# Wildlife-Conservation-Tools

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  quick_start.py  test_installation.py
.github/workflows/: ci.yml
configs/: config.yaml
demo/: app.py
scripts/: train_models.py
src/: __init__.py
src/data/: __init__.py  generate_data.py
src/eval/: __init__.py  evaluation.py
src/features/: __init__.py  feature_engineering.py
src/viz/: __init__.py  visualization.py
tests/: test_data_generation.py
